<resources>

    <!--Splash name-->
    <string name="splash_name">Autotransportes \nScorpio</string>

    <!--Strings for new employee-->

    <string name="app_name">Scorpio</string>
    <string name="employee_key">ID</string>
    <string name="employee_season">Temporada</string>
    <string name="employee_full_name">Nombre(s)</string>
    <string name="employee_first_name">Apellido Paterno</string>
    <string name="employee_last_name">Apellido Materno</string>

    <string name="employee_origin">Origen</string>
    <string name="employee_date_birth">F. Nac</string>
    <string name="employee_leverage">Enganche</string>
    <string name="employee_activity">Actividad</string>
    <string name="employee_travel">Viaje</string>
    <string name="employee_bus">Camion</string>
    <string name="employee_curp">CURP</string>

    <string name="employee_departure">Salida</string>
    <string name="employee_arrive">Llegada</string>
    <string name="employee_start">Inicio</string>
    <string name="employee_end">Fin</string>

    <!--String for display employees-->
    <string name="title_home">Menu principal</string>
    <string name="subtitle_new_worker">Nuevo Trabajador</string>
    <string name="title_new_worker">Alta Trabajadores</string>
    <string name="input_bus_number">Ingresa el número del camión</string>
    <string name="employees_number_trip">Camion</string>
    <string name="empty_list_workers">La esta lista vacía, para agregar un trabajador, pulse el botón NUEVO en la parte superior.</string>
    <string name="empty_workers_selected">No hay elementos seleccionados</string>
    <string name="press_again_to_exit">Presione nuevamente para Salir</string>
    <string name="exit">Salir</string>
    <string name="continue_workers_register">Seguir asignando</string>
    <string name="title_exit_dialog">¿Realmente desea Salir?</string>
    <string name="message_exit_dialog">Aun hay elementos que no se han asignado.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
