<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <!--Container Key and Season-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/bg_container"
            android:layout_marginBottom="@dimen/margin_8dp"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_6dp"
                android:layout_marginBottom="@dimen/margin_6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/employee_key"
                    android:textColor="@color/text_color_dark_gray"
                    android:textStyle="bold"
                    android:layout_marginEnd="@dimen/margin_6dp"/>

                <EditText
                    android:id="@+id/edt_employee_key"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color_dark"
                    android:textStyle="bold"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:inputType="text"
                    android:scrollHorizontally="true"
                    android:background="@drawable/bg_edt_employee"/>

            </LinearLayout>

        </LinearLayout>

        <!--Container Employee personal information-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/bg_container"
            android:layout_marginTop="@dimen/margin_8dp"
            android:layout_marginBottom="@dimen/margin_8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_6dp"
                android:layout_marginBottom="@dimen/margin_6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/employee_first_name"
                    android:textColor="@color/text_color_dark_gray"
                    android:textStyle="bold"
                    android:layout_marginEnd="@dimen/margin_6dp"/>

                <EditText
                    android:id="@+id/edt_employee_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color_dark"
                    android:textStyle="bold"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:inputType="text"
                    android:scrollHorizontally="true"
                    android:imeOptions="actionNext"
                    android:background="@drawable/bg_edt_employee"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/margin_6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/employee_last_name"
                    android:textColor="@color/text_color_dark_gray"
                    android:textStyle="bold"
                    android:layout_marginEnd="@dimen/margin_6dp"/>

                <EditText
                    android:id="@+id/edt_employee_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color_dark"
                    android:textStyle="bold"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:inputType="text"
                    android:scrollHorizontally="true"
                    android:imeOptions="actionNext"
                    android:background="@drawable/bg_edt_employee"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/margin_6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/employee_full_name"
                    android:textColor="@color/text_color_dark_gray"
                    android:textStyle="bold"
                    android:layout_marginEnd="@dimen/margin_6dp"/>

                <EditText
                    android:id="@+id/edt_employee_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color_dark"
                    android:textStyle="bold"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:inputType="text"
                    android:scrollHorizontally="true"
                    android:imeOptions="actionNext"
                    android:background="@drawable/bg_edt_employee"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/margin_6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/employee_origin"
                    android:textColor="@color/text_color_dark_gray"
                    android:textStyle="bold"
                    android:layout_marginEnd="@dimen/margin_6dp"/>

                <EditText
                    android:id="@+id/edt_employee_origin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color_dark"
                    android:textStyle="bold"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:inputType="text"
                    android:scrollHorizontally="true"
                    android:imeOptions="actionNext"
                    android:background="@drawable/bg_edt_employee"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/margin_10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/employee_date_birth"
                    android:textColor="@color/text_color_dark_gray"
                    android:textStyle="bold"
                    android:layout_marginEnd="@dimen/margin_6dp"/>

                <EditText
                    android:id="@+id/edt_employee_date_birth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color_dark"
                    android:textStyle="bold"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:inputType="text"
                    android:scrollHorizontally="true"
                    android:imeOptions="actionNext"
                    android:background="@drawable/bg_edt_employee"
                    android:hint="30-02-2017"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/margin_10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/employee_curp"
                    android:textColor="@color/text_color_dark_gray"
                    android:textStyle="bold"
                    android:layout_marginEnd="@dimen/margin_6dp"/>

                <EditText
                    android:id="@+id/edt_employee_curp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_color_dark"
                    android:textStyle="bold"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:inputType="text"
                    android:scrollHorizontally="true"
                    android:imeOptions="actionDone"
                    android:background="@drawable/bg_edt_employee"
                    android:text=""/>

            </LinearLayout>

        </LinearLayout>

        <!--Container Information Arrive-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="100"
            android:background="@drawable/bg_container"
            android:layout_marginBottom="@dimen/margin_8dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="48"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="4"
                android:background="@color/color_light_gray"
                android:layout_marginBottom="@dimen/margin_10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="@dimen/margin_6dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/employee_activity"
                        android:textColor="@color/text_color_dark_gray"
                        android:textStyle="bold"/>

                    <EditText
                        android:id="@+id/edt_employee_activity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_color_dark"
                        android:textStyle="bold"
                        android:background="@drawable/bg_edt_employee"
                        android:text="Jornalero"
                        android:enabled="false" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_take_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tomar fotografía"
            android:textColor="@android:color/white"
            android:layout_marginTop="@dimen/margin_6dp"
            android:layout_marginBottom="@dimen/margin_6dp"
            android:paddingLeft="@dimen/margin_6dp"
            android:paddingRight="@dimen/margin_6dp"
            android:layout_gravity="center"
            android:background="@color/red" />


        <ImageView
            android:id="@+id/img_took"
            android:layout_width="215dp"
            android:layout_height="288dp"
            android:scaleType="fitXY"
            android:layout_gravity="center"/>

    </LinearLayout>

</ScrollView>